--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
+    <include layout="@layout/title_layout"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -56,15 +58,11 @@
 
     <Button
         android:id="@+id/login"
+        android:text="@string/login"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/button"
-        android:text="@string/login"
-        android:textColor="@color/title_text"
-        android:textSize="15sp"
+        style="@style/Button"
         />
 
 </LinearLayout>
