--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,15 @@
         <item name="android:textColor">@color/text</item>
         <item name="android:textColorHint">@color/hint</item>
     </style>
+
+    <style name="Button">
+        <item name="android:background">@drawable/button</item>
+        <item name="android:layout_marginLeft">30dp</item>
+        <item name="android:layout_marginRight">30dp</item>
+        <item name="android:textColor">@color/title_text</item>
+        <item name="android:textSize">15sp</item>
+
+
+    </style>
+
 </resources>
