--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -61,6 +61,7 @@
             style="@style/Button"
             android:text="获取验证码"
             android:textSize="12sp"
+            android:layout_marginRight="10dp"
             />
 
     </LinearLayout>
