--- a/app/src/main/res/layout-sw550dp-large/umeng_socialize_oauth_dialog.xml
+++ b/app/src/main/res/layout-sw550dp-large/umeng_socialize_oauth_dialog.xml
@@ -2,11 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="5dp" >
+     >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:background="#0086DC"
+        android:background="@color/colorPrimary"
         android:id="@+id/umeng_socialize_titlebar"
         android:layout_height="54dp">
         <TextView
