--- a/app/src/main/res/layout/umeng_socialize_oauth_dialog.xml
+++ b/app/src/main/res/layout/umeng_socialize_oauth_dialog.xml
@@ -9,7 +9,7 @@
         android:id="@+id/umeng_socialize_titlebar"
         android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:background="#0086DC">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:id="@+id/umeng_title"
