--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,92 +2,79 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-    <include layout="@layout/title_layout"/>
+    android:orientation="vertical">
+
+    <include layout="@layout/title_layout" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="30dp"
-        android:orientation="horizontal"
-        >
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
         <TextView
+            style="@style/Text"
             android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:text="@string/phone"
-            style="@style/Text"
-            />
+            android:text="@string/phone" />
+
         <EditText
             android:id="@+id/phone"
+            style="@style/EditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:hint="@string/input_phone"
             android:inputType="phone"
-            android:maxLength="11"
-            style="@style/EditText"
-            />
+            android:maxLength="11" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="30dp"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <TextView
+            style="@style/Text"
             android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:text="@string/pass_word"
-            style="@style/Text"
-            />
+            android:text="@string/pass_word" />
+
         <EditText
             android:id="@+id/password"
+            style="@style/EditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="20dp"
             android:hint="@string/hint_password"
-            android:inputType="textPassword"
-            style="@style/EditText"
-            />
+            android:inputType="textPassword" />
     </LinearLayout>
 
     <Button
         android:id="@+id/login"
-        android:text="@string/login"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="30dp"
-        style="@style/Button"
-        />
+        android:text="@string/login" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
 
         >
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/qq"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_centerInParent="true"
-            >
-
-            <ImageView
-                android:id="@+id/qq"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/share_qq_click_icon"
-                />
-        </LinearLayout>
-
-
-
+            android:background="@drawable/qq" />
     </RelativeLayout>
 
 </LinearLayout>
