--- a/app/src/main/res/layout/activity_image_select.xml
+++ b/app/src/main/res/layout/activity_image_select.xml
@@ -14,5 +14,13 @@
         android:layout_marginTop="5dp"
         android:overScrollMode="never" />
 
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
+        android:text="清理缓存"
+        style="@style/Button"
+        />
 
 </LinearLayout>
