--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -39,6 +39,15 @@
         />
 
     <Button
+        android:id="@+id/html"
+        android:text="与H5交互"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        style="@style/Button"
+        android:layout_marginTop="15dp"
+        />
+
+    <Button
         android:id="@+id/update"
         android:text="版本更新"
         android:layout_width="match_parent"
