--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -48,6 +48,15 @@
         />
 
     <Button
+        android:id="@+id/sql"
+        android:text="数据库"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        style="@style/Button"
+        android:layout_marginTop="15dp"
+        />
+
+    <Button
         android:id="@+id/update"
         android:text="版本更新"
         android:layout_width="match_parent"
