--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -1,76 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        >
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/photo"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            app:civ_border_width="5dp"
-            app:civ_border_color="@color/colorPrimary"
-            android:layout_centerInParent="true"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/photo"
+                android:layout_width="160dp"
+                android:layout_height="160dp"
+                android:layout_centerInParent="true"
+                app:civ_border_color="@color/colorPrimary"
+                app:civ_border_width="5dp" />
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/image_select"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="照片选择" />
+
+        <Button
+            android:id="@+id/im_cloud"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="即时通讯" />
+
+        <Button
+            android:id="@+id/sport"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="开始运动" />
+
+        <Button
+            android:id="@+id/html"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="与H5交互" />
+
+        <Button
+            android:id="@+id/sql"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="数据库" />
+
+        <Button
+            android:id="@+id/update"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="版本更新" />
+
+        <Button
+            android:id="@+id/logout"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="退出登录"
+            android:layout_marginBottom="200dp"
+
             />
-
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/image_select"
-        android:text="照片选择"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        style="@style/Button"
-        android:layout_marginTop="15dp"
-        />
-    <Button
-        android:id="@+id/sport"
-        android:text="开始运动"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        style="@style/Button"
-        android:layout_marginTop="15dp"
-        />
-
-    <Button
-        android:id="@+id/html"
-        android:text="与H5交互"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        style="@style/Button"
-        android:layout_marginTop="15dp"
-        />
-
-    <Button
-        android:id="@+id/sql"
-        android:text="数据库"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        style="@style/Button"
-        android:layout_marginTop="15dp"
-        />
-
-    <Button
-        android:id="@+id/update"
-        android:text="版本更新"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        style="@style/Button"
-        android:layout_marginTop="15dp"
-        />
-
-    <Button
-        android:id="@+id/logout"
-        android:text="退出登录"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        style="@style/Button"
-        android:layout_marginTop="15dp"
-        />
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
