--- a/IMKit/src/main/res/layout/rc_base_activity_layout.xml
+++ b/IMKit/src/main/res/layout/rc_base_activity_layout.xml
@@ -25,7 +25,7 @@
             android:layout_height="24dp"
             android:layout_marginBottom="12dp"
             android:layout_marginTop="12dp"
-            android:background="#0083e0" />
+            android:background="#fa120a" />
 
         <TextView
             android:id="@+id/rc_action_bar_title"
