--- a/IMKit/src/main/res/values/rc_ext_color.xml
+++ b/IMKit/src/main/res/values/rc_ext_color.xml
@@ -22,7 +22,7 @@
     <color name="rc_divider_color">#d9d9d9</color>
     <color name="rc_emoji_grid_item_bg">#ebebeb</color>
 
-    <color name="rc_main_theme">#0195ff</color>
+    <color name="rc_main_theme">#fa120a</color>
 
     <color name="rc_popup_dialog_list_divider_color">#dfdfdd</color>
 
