--- a/app/src/main/res/layout/activity_cloud_im.xml
+++ b/app/src/main/res/layout/activity_cloud_im.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/conversationlist"
-        android:name="io.rong.imkit.fragment.ConversationListFragment"
+        android:name="io.rong.imkit.fragment.ConversationFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
