--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="button_background">#c4c3c3</color>
     <color name="color_f6">#f6f6f6</color>
     <color name="stroke">#00FFFFFF</color>
+    <color name="back">#edecec</color>
 
 </resources>
