--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -66,6 +66,14 @@
             android:text="数据库" />
 
         <Button
+            android:id="@+id/bluetooth"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="15dp"
+            android:text="蓝牙使用" />
+
+        <Button
             android:id="@+id/update"
             style="@style/Button"
             android:layout_width="match_parent"
